force-app/main/default/objects/rcsfl__AdminSetting__c/rcsfl__AdminSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AdminSetting</label>
</CustomObject>