force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__accountRelatedTo__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__accountRelatedTo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>accountRelatedTo</label>
    <type>Checkbox</type>
</CustomField>