force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__AutoFill__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__AutoFill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enhanced Autofill &quot;Name&quot; and &quot;Related to&quot; in Click to Dial.</description>
    <label>AutoFill</label>
    <type>Checkbox</type>
</CustomField>