force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__AutoSave__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__AutoSave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoSave</label>
    <type>Checkbox</type>
</CustomField>