force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__autoSelect__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__autoSelect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>autoSelect</label>
    <type>Checkbox</type>
</CustomField>