force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__fieldOrder__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__fieldOrder__c</fullName>
    <label>fieldOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>