force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__HvsDispositionField__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__HvsDispositionField__c</fullName>
    <description>record which field will be used for hvs disposition field</description>
    <label>HvsDispositionField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>