force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__HvsMode__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__HvsMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HvsMode</label>
    <type>Checkbox</type>
</CustomField>