force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__IsUnMandatory__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__IsUnMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnMandatory</label>
    <type>Checkbox</type>
</CustomField>