force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__popOnRinging__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__popOnRinging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>popOnRinging</label>
    <type>Checkbox</type>
</CustomField>