force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__saveOnRinging__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__saveOnRinging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>saveOnRinging</label>
    <type>Checkbox</type>
</CustomField>