force-app/main/default/objects/rcsfl__AdminSetting__c/fields/rcsfl__ToVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__ToVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToVoiceMail</label>
    <type>Checkbox</type>
</CustomField>